--- a/css/override.css
+++ b/css/override.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BioRhyme:wght@200;300;400;700;800&display=swap');
+body {
+    
+    font-family: 'Space Mono', monospace;
+    
+}
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'BioRhyme', serif;
+  
+}
+
 hr {
   margin-top: 30px;
   margin-bottom: 20px;
